# sdlc

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPER.md  Dockerfile  Dockerfile.base  Makefile  QUICKSTART.md  README.md  VISION.md  docker-compose.env.example  docker-compose.yml  evolve.md  guidelines.md  install-deps.ps1  install.ps1  install.sh  justfile  libtemplates.rlib  packaging-deps.ps1  root-cause.md
.ai/: index.md
.ai/architecture/: sdlc-agent-sdk.md
.cargo/: config.toml
.claude/agents/: aria-chen.md  ben-hartley.md  cto-cpo-lens.md  dan-reeves.md  dana-cho.md  felix-wagner.md  kai-yamazaki.md  knowledge-librarian.md  lars-andersen.md  leila-hassan.md  lia-santangelo.md  mara-solberg.md  marcus-webb.md  maya-goldberg.md  nadia-osei.md  priya-chakraborty.md  priya-nair.md  ray-okafor.md  remi-okonkwo.md  tobias-krenn.md  xist-gamedev.md  xist-user.md  yuki-tanaka.md
.github/: release.yml
.github/workflows/: build-setup.yml  release.yml  uat.yml
.sdlc/: .orchestrator.state  backlog.yaml  beat.yaml  changelog.yaml  config.yaml  feedback.yaml  guidance.md  merge-state.sh  state.yaml
.sdlc/.runs/: 20260302-020808-lrr.events.json  (+360 more)
.woodpecker/: build.yaml  provision.yaml
crates/claude-agent/: Cargo.toml
crates/claude-agent/src/: error.rs  lib.rs  process.rs  runner.rs  session.rs  stream.rs  tests.rs  types.rs
crates/claude-agent/src/provider/: claude.rs  claude_types.rs  codex.rs  codex_types.rs  mod.rs  opencode.rs  opencode_types.rs
crates/sdlc-cli/: Cargo.toml  build.rs
crates/sdlc-cli/src/: lib.rs  main.rs  output.rs  root.rs
crates/sdlc-cli/src/cmd/: agent.rs  artifact.rs  auth.rs  backlog.rs  changelog.rs  comment.rs  commit.rs  config.rs  escalate.rs  feature.rs  focus.rs  gate.rs  init.rs  investigate.rs  knowledge.rs  mcp.rs  merge.rs  milestone.rs  mod.rs  next.rs  orchestrate.rs  parallel_work.rs  platform.rs  ponder.rs  prepare.rs  project.rs  query.rs  run.rs  score.rs  secrets.rs  spike.rs  state.rs  task.rs  telegram.rs  thread.rs  tool.rs  tunnel.rs  ui.rs  update.rs
crates/sdlc-cli/src/cmd/init/: mod.rs  registry.rs  templates.rs
crates/sdlc-cli/src/cmd/init/commands/: mod.rs  sdlc_approve.rs  sdlc_architecture_adjustment.rs  sdlc_beat.rs  sdlc_commit.rs  sdlc_convo_mine.rs  sdlc_cookbook.rs  sdlc_cookbook_run.rs  sdlc_empathy.rs  sdlc_enterprise_readiness.rs  sdlc_fit_impact.rs  sdlc_guideline.rs  sdlc_hypothetical_do.rs  sdlc_hypothetical_planning.rs  sdlc_init.rs  sdlc_knowledge.rs  sdlc_milestone_uat.rs  sdlc_next.rs  sdlc_organize_parallel.rs  sdlc_plan.rs  sdlc_ponder.rs  sdlc_ponder_commit.rs  sdlc_prepare.rs  sdlc_pressure_test.rs  sdlc_quality_fix.rs  sdlc_recap.rs  sdlc_recruit.rs  sdlc_run.rs  sdlc_run_wave.rs  sdlc_setup_quality_gates.rs  sdlc_skill_build.rs  sdlc_specialize.rs  sdlc_spike.rs  sdlc_status.rs  sdlc_suggest.rs  sdlc_tool_audit.rs  sdlc_tool_build.rs  sdlc_tool_run.rs  sdlc_tool_uat.rs  sdlc_vision_adjustment.rs
crates/sdlc-cli/src/tools/: add_comment.rs  add_task.rs  approve_artifact.rs  complete_task.rs  get_directive.rs  merge.rs  mod.rs  ponder_chat.rs  prepare.rs  project_phase.rs  reject_artifact.rs  repair_artifact.rs  run_wave.rs  write_artifact.rs
crates/sdlc-cli/tests/: integration.rs  telegram_test.rs
crates/sdlc-cli/wix/: License.rtf  main.wxs
crates/sdlc-core/: Cargo.toml
crates/sdlc-core/src/: advisory.rs  ama_thread.rs  artifact.rs  auth_config.rs  backlog.rs  classifier.rs  comment.rs  config.rs  directive.rs  error.rs  escalation.rs  event_log.rs  feature.rs  feedback.rs  feedback_thread.rs  focus.rs  gate.rs  investigation.rs  io.rs  knowledge.rs  lib.rs  migrations.rs  milestone.rs  parallel_work.rs  paths.rs  ponder.rs  prepare.rs  rules.rs  score.rs  search.rs  secrets.rs  spikes.rs  state.rs  task.rs  telemetry_backend.rs  tool_interaction.rs  tool_runner.rs  types.rs  ui_registry.rs  workspace.rs
crates/sdlc-core/src/orchestrator/: action.rs  backend.rs  db.rs  mod.rs  webhook.rs
crates/sdlc-core/src/telegram/: client.rs  digest.rs  mailer.rs  mod.rs  poll.rs  runner.rs  types.rs
crates/sdlc-server/: Cargo.toml  build.rs
crates/sdlc-server/migrations/: 001_telemetry.sql  002_orchestrator.sql  003_run_records.sql  004_webhook_query.sql  005_invites.sql
crates/sdlc-server/src/: auth.rs  citadel.rs  credential_pool.rs  embed.rs  error.rs  fleet.rs  heartbeat.rs  hub.rs  invite.rs  lib.rs  notify.rs  oauth.rs  pg_common.rs  pg_orchestrator.rs  pg_telemetry.rs  proxy.rs  state.rs  subprocess.rs  telemetry.rs  tunnel.rs
crates/sdlc-server/src/email/: layout.rs  mod.rs  theme.rs
crates/sdlc-server/src/routes/: advisory.rs  agents.rs  ama_threads.rs  app_tunnel.rs  architecture.rs  artifacts.rs  auth_tokens.rs  backlog.rs  changelog.rs  comments.rs  config.rs  credential_pool.rs  diagnose.rs  escalations.rs  events.rs  features.rs  feedback.rs  git.rs  hub.rs  init.rs  investigations.rs  invites.rs  knowledge.rs  milestones.rs  mod.rs  orchestrator.rs  prepare.rs  query.rs  roadmap.rs  runs.rs  secrets.rs  spikes.rs  state.rs  tasks.rs  telemetry.rs  threads.rs  tools.rs  tunnel.rs  vision.rs  webhooks.rs
crates/sdlc-server/tests/: integration.rs
deploy/: .env.example  RUNBOOK.md  deploy.sh  telegram-digest.service  telegram-digest.timer  telegram-message-store.service
dev/: init-postgres.sql  setup-gitea.sh  setup-woodpecker.sh
docs/: ai-cli-compatibility.md  architecture.md  cluster-operations.md  dev-run-v2-rfp.md  dev-run.md  fleet-deployment.md  local-fleet-stack.md  orch-tunnel-reference.md  plan-act-pattern.md  ponder-dialogue.md  ponder-space.md  sdlc-tools-suite-plan.md  sdlc-tools-suite-technical.md  sdlc-tools-suite.md  tool-system.md  troubleshooting-fleet.md  tunnel-gateway.md  uat-enterprise-strategy.md  vision.md  workspaces.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vite.preview.config.ts  vite.uat.config.ts
html-prototypes/: onboarding-dashboard-gap-plan.md  onboarding-dashboard-mockup.html
product/: competitive-matrix.md  one-pager.md
(+2929 files in other folders)
