[workspace]
members = [
    "crates/sdlc-core",
    "crates/sdlc-cli",
    "crates/sdlc-server",
    "crates/claude-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/orchard9/sdlc"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tempfile = "3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
open = "5"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
home = "0.5"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish GitHub Releases to this repo instead
github-releases-repo = "orchard9/sdlc-releases"
# A GitHub repo to push Homebrew formulas to
tap = "orchard9/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
github-build-setup = "build-setup.yml"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# Release profile for distributed binaries
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
