[workspace]
members = [
    "crates/sdlc-core",
    "crates/sdlc-cli",
    "crates/sdlc-server",
    "crates/claude-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/orchard9/sdlc"
authors = ["orchard9"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tempfile = "3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
open = "5"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
home = "0.5"
which = "6"
redb = "2"

# Release profile for distributed binaries
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
