[package]
name = "sdlc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic SDLC orchestration CLI"

[[bin]]
name = "sdlc"
path = "src/main.rs"

[dependencies]
sdlc-core = { path = "../sdlc-core" }
sdlc-server = { path = "../sdlc-server" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = { workspace = true }
predicates = "3"
