[package]
name = "sdlc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic SDLC orchestration CLI"
repository.workspace = true
homepage = "https://github.com/orchard9/sdlc-releases"

[[bin]]
name = "sdlc"
path = "src/main.rs"

[dependencies]
sdlc-core = { path = "../sdlc-core" }
sdlc-server = { path = "../sdlc-server" }
claude-agent = { path = "../claude-agent" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
open = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
rand = "0.8"
qrcode = "0.14"

[dev-dependencies]
assert_cmd = "2"
tempfile = { workspace = true }
predicates = "3"
serde_yaml = { workspace = true }
