[package]
name = "sdlc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic SDLC orchestration CLI"
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/orchard9/sdlc"

[[bin]]
name = "ponder"
path = "src/main.rs"

[lib]
name = "sdlc_cli"
path = "src/lib.rs"

[dependencies]
sdlc-core = { path = "../sdlc-core" }
sdlc-server = { path = "../sdlc-server" }
claude-agent = { path = "../claude-agent" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
open = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
rand = "0.8"
qrcode = "0.14"
ureq = "2"

[dev-dependencies]
assert_cmd = "2"
tempfile = { workspace = true }
predicates = "3"
serde_yaml = { workspace = true }

[package.metadata.deb]
name = "ponder"
maintainer = "orchard9"
extended-description = "Deterministic feature lifecycle state machine"
section = "utils"
assets = [
  ["target/release/ponder", "usr/bin/ponder", "755"],
  ["target/release/ponder", "usr/bin/sdlc", "755"],
]

[package.metadata.generate-rpm]
name = "ponder"
[[package.metadata.generate-rpm.assets]]
source = "../../target/dist/ponder"
dest = "/usr/bin/ponder"
mode = "755"
[[package.metadata.generate-rpm.assets]]
source = "../../target/dist/ponder"
dest = "/usr/bin/sdlc"
mode = "755"
