[package]
name = "sdlc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain and state machine for sdlc"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
home = { workspace = true }
which = { workspace = true }
tantivy = "0.22"
tempfile = { workspace = true }
redb = { workspace = true }
uuid = { workspace = true }
