[package]
name = "sdlc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI server for SDLC orchestration"

[dependencies]
sdlc-core = { path = "../sdlc-core" }
claude-agent = { path = "../claude-agent" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3"
open = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
