[package]
name = "sdlc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI server for SDLC orchestration"

[dependencies]
sdlc-core = { path = "../sdlc-core" }
claude-agent = { path = "../claude-agent" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3"
open = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
kube = { version = "0.98", features = ["client", "runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
bytes = "1"
redb = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "json"] }
dirs = "5"

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
